Add Advanced Exercise to Basic

--- a/Basic.html
+++ b/Basic.html
@@ -15,5 +15,13 @@
         <a class="Company" href="#contact" >Company</a>
         <a class="Contact" href="#about" >Contact</a>
     </nav> 
+    <div class="PhotoAlbum">
+        <div class="item1"></div>
+        <div class="item2"></div>
+        <div class="item3"></div>
+        <div class="item4"></div>
+        <div class="item5"></div>
+        <div class="item6"></div>
+    </div>
 </body>
 </html>
